# testing-bambi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  regression-splines.ipynb
notebooks/: bayesian-workflow-police.ipynb  bayesian-workflow-strack.ipynb  beta-regression.ipynb  categorical-regression.ipynb  circular-regression.ipynb  comparison-of-two-means.ipynb  count-regression-with-variable-exposure.ipynb  data_utils.py  distributional-models.ipynb  gaussian-processes-in-2d.ipynb  gaussian-processes.ipynb  hierarchical-linear-regression-pigs.ipynb  hierarchical-linear-regression-radon.ipynb  hierarchical-linear-regression-sleep.ipynb  hierarchical-logistic-regrssion-with-binomial.ipynb  logistic-regression-model-comparison.ipynb  logistic-regression-vote.ipynb  multi-level-regression-and-post-stratification.ipynb  multiple-linear-regression.ipynb  negative-binomial-regression.ipynb  ordinal-regression.ipynb  orthogonal-polynomial-regression.ipynb  polynomial-regression.ipynb  predict-new-groups.ipynb  quantile-regression.ipynb  regression-for-binary-responses.ipynb  robust-linear-regression.ipynb  survival-models.ipynb  wald-and-gamma-regression.ipynb  zero-inflated-models.ipynb
