[project]
name = "testing-bambi"
version = "0.1.0"
description = "Taking bambi notebooks from https://bambinos.github.io/bambi/notebooks/ and running them to check reproducibility."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bambi>=0.14.0",
    "ipywidgets>=8.1.5",
    "notebook>=7.3.1",
    "pre-commit>=4.0.1",
]
